[gd_scene load_steps=14 format=3 uid="uid://d1edofi81ikrt"]

[ext_resource type="Texture2D" uid="uid://bxeee24bq01xe" path="res://UltimateGodotIntro2D-main/Free Enemies/Element Crystal 1A[single].png" id="1_4jn0k"]
[ext_resource type="Texture2D" uid="uid://txi74uxtanlr" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Enemies and NPC/eagle/Sprites/attack/eagle-attack-1.png" id="1_triwp"]
[ext_resource type="Texture2D" uid="uid://j4ayo4n6edel" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Enemies and NPC/eagle/Sprites/attack/eagle-attack-3.png" id="2_e8qh2"]
[ext_resource type="Texture2D" uid="uid://corfdnklgnrkm" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Enemies and NPC/eagle/Sprites/attack/eagle-attack-2.png" id="3_qlxxu"]
[ext_resource type="Texture2D" uid="uid://dbj7yv2iryqcl" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/Enemies and NPC/eagle/Sprites/attack/eagle-attack-4.png" id="4_1lr2t"]
[ext_resource type="Script" uid="uid://v04dfv2f5qoh" path="res://player.gd" id="5_vmr12"]
[ext_resource type="AudioStream" uid="uid://brr58owoluthp" path="res://Jump_Sound.mp3" id="6_cscff"]
[ext_resource type="AudioStream" uid="uid://70ywnr3802og" path="res://Body_fall_sound.mp3" id="7_vwwuc"]
[ext_resource type="AudioStream" uid="uid://cj1rjvpxkr8eq" path="res://Moon_Phases_128x128/kenney-rpg-audio-for-godot-22eb79bb843bbcadcaa6ed119353a33265ffad11/addons/kenney rpg audio/footstep_2.ogg" id="8_u131f"]
[ext_resource type="AudioStream" uid="uid://bdmpe4auohhld" path="res://Walk.mp3" id="9_myv64"]

[sub_resource type="CircleShape2D" id="CircleShape2D_itbi2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2ehbl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_triwp")
}, {
"duration": 1.0,
"texture": ExtResource("2_e8qh2")
}, {
"duration": 1.0,
"texture": ExtResource("3_qlxxu")
}, {
"duration": 1.0,
"texture": ExtResource("4_1lr2t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ajkg"]
size = Vector2(166.5, 193.5)

[node name="World" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CharacterBody2D2" type="CharacterBody2D" parent="Sprite2D"]

[node name="ElementCrystal1a[single]" type="Sprite2D" parent="Sprite2D/CharacterBody2D2"]
position = Vector2(499.5, 371.5)
scale = Vector2(2.15625, 1.88125)
texture = ExtResource("1_4jn0k")

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Sprite2D/CharacterBody2D2"]
position = Vector2(562.702, 332.513)
scale = Vector2(4.34167, 2.4101)
polygon = PackedVector2Array(-0.300003, -20.4, -3, -19.4, -3, -17.7, -9.8, -9, -12.1, -9, -14.1, -6, -16, -6, -16, 0, -18, 0, -13, 12.4, -13, 16, -8.2, 16, -10, 31.9, -10, 39.6, -2.1, 52, 1, 52, 11, 38, 12.4, 38, 15.4, 29, 18.4, 29, 8.2, 11.1, 10, -0.900002, 10, -7.7)
one_way_collision = true

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Sprite2D/CharacterBody2D2"]
position = Vector2(486.3, 392.295)
scale = Vector2(4.34533, 3.65712)
polygon = PackedVector2Array(20.8, -4.3, 18, -3.5, 18, -1.7, 14, 4, 11.1, 4, 16, 17.4, 16, 19.3, 18.5, 20.4, 23.8, 15, 25.1, 15, 28, 10.6, 28, 6.4)
one_way_collision = true

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Sprite2D/CharacterBody2D2"]
position = Vector2(627.236, 278.533)
scale = Vector2(5.38435, 4.05795)
polygon = PackedVector2Array(-23.2, 6.7, -26, 7.5, -26, 9.3, -31, 16, -33.9, 16, -28, 31.4, -28, 33.3, -25.5, 34.4, -19.2, 28, -17.9, 28, -15, 23.6, -15, 18.4)
one_way_collision = true
one_way_collision_margin = 82.9

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(380, 847)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(681, -454)
scale = Vector2(4.8, 4.56)
shape = SubResource("CircleShape2D_itbi2")

[node name="Player" type="AnimatedSprite2D" parent="CharacterBody2D/CollisionShape2D"]
position = Vector2(0, 0.219299)
scale = Vector2(0.255208, 0.23267)
sprite_frames = SubResource("SpriteFrames_2ehbl")
autoplay = "default"
script = ExtResource("5_vmr12")

[node name="HealthBar" type="ProgressBar" parent="CharacterBody2D/CollisionShape2D/Player"]
light_mask = 3
visibility_layer = 3
anchors_preset = 10
anchor_right = 1.0
offset_left = -17.1429
offset_top = -42.4138
offset_right = -17.1429
offset_bottom = -15.4138
grow_horizontal = 2
value = 90.0
allow_lesser = true

[node name="SoundUp" type="AudioStreamPlayer2D" parent="CharacterBody2D/CollisionShape2D/Player"]
stream = ExtResource("6_cscff")

[node name="SoundDown" type="AudioStreamPlayer2D" parent="CharacterBody2D/CollisionShape2D/Player"]
stream = ExtResource("7_vwwuc")

[node name="SoundLeft" type="AudioStreamPlayer2D" parent="CharacterBody2D/CollisionShape2D/Player"]
stream = ExtResource("8_u131f")

[node name="SoundRight" type="AudioStreamPlayer2D" parent="CharacterBody2D/CollisionShape2D/Player"]
position = Vector2(-2.44898, 4.71262)
stream = ExtResource("9_myv64")

[node name="StaticBody2D" type="StaticBody2D" parent="CharacterBody2D"]
position = Vector2(-380, -847)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/StaticBody2D"]
position = Vector2(497, 400)
shape = SubResource("RectangleShape2D_1ajkg")

[node name="Panel" type="Panel" parent="CharacterBody2D/StaticBody2D/CollisionShape2D"]
offset_left = -287.0
offset_top = -273.0
offset_right = -108.0
offset_bottom = -61.0
